--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "classnames": "^2.2.6",
     "mobx": "4.8.0",
     "nerv-devtools": "^1.4.0",
-    "nervjs": "^1.4.0"
+    "nervjs": "^1.4.0",
+    "taro-ui": "^2.2.4"
   },
   "devDependencies": {
     "@tarojs/plugin-babel": "1.3.22",
@@ -50,6 +51,7 @@
     "@tarojs/plugin-sass": "1.3.22",
     "@tarojs/plugin-uglifyjs": "1.3.22",
     "@tarojs/webpack-runner": "1.3.22",
+    "@types/jest": "^24.0.23",
     "@types/react": "16.3.14",
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/parser": "^1.6.0",
@@ -65,9 +67,12 @@
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^1.6.1",
     "eslint-plugin-taro": "1.3.22",
+    "jest": "^24.9.0",
+    "prettier": "^1.19.1",
     "stylelint": "9.3.0",
     "stylelint-config-taro-rn": "1.3.22",
     "stylelint-taro-rn": "1.3.22",
+    "ts-jest": "^24.1.0",
     "typescript": "^3.0.1"
   }
 }
