--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "@tarojs/taro-tt": "1.3.22",
     "@tarojs/taro-weapp": "1.3.22",
     "@types/classnames": "^2.2.9",
+    "@types/moment": "^2.13.0",
     "classnames": "^2.2.6",
     "mobx": "4.8.0",
+    "moment": "^2.24.0",
     "nerv-devtools": "^1.4.0",
     "nervjs": "^1.4.0",
     "taro-ui": "^2.2.4"
